--- a/db_config.json
+++ b/db_config.json
@@ -1,7 +1,7 @@
 {
     "host": "localhost",
-    "port": "5432",
+    "port": "",
     "database": "cian_parser_2",
-    "user": "postgres",
+    "user": "",
     "password": "ПАРОЛЬ"
 }
